<?xml version="1.0" encoding="utf-8"?>
<!--This project creat by SAID MOTYA for secret gfx group members-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivitySplash">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/ic_splash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/riot"
                android:textSize="@dimen/_14sdp"
                android:text="@string/splash_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/progresseBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:minHeight="@dimen/_10sdp"
                android:minWidth="@dimen/_240sdp"
                android:indeterminate="false"
                android:progressTint="@color/color_progressTint"
                android:progressBackgroundTint="@color/color_progressBackground"
                android:progress="1" />


            <TextView
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/riot"
                android:text="@string/splash_loading"
                android:textSize="@dimen/_7sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/color_info"
                android:fontFamily="@font/riot"
                android:text="@string/splash_info"
                android:textSize="@dimen/_6sdp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>